--- a/style.css
+++ b/style.css
@@ -11,30 +11,28 @@
     align-items: baseline;
 }
 
-.skillsautoparent {
+.bodyobjects {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+
+    font-family: Fujifilm;
+    font-size: 30px;
 }
 
 .placeholder{
 
     height: 300px;
     width: 300px;
-    background-color: black;
+    background-color: green;
     color: white;
     margin: 10px;
-}
-
-.placeholderparent {
-    display: flex;
-    justify-content: center;
 }
 
 .projects{
     height: 300px;
     width: 300px;
-    background-color: black;
+    background-color: green;
     color: white;
     margin: 10px;
 }
@@ -45,16 +43,48 @@
 }
 
 .header {
-    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 5px;
+    font-size: 30px;
     text-align: center;
-    background: white;
-    color: green;
-    border: 3px solid black;
-    margin: 10px;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-family: Altone;
+
+    text-decoration: none;
 }
 
 .parenttext {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     font-size: 15px;
     border: 3px solid black;
+    background: rgba(0, 0, 0, 0.7);
     margin: 10px;
+}
+
+.navigationtexts {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.headertext {
+    padding: 10px;
+}
+
+.headertext2 {
+    padding: 10px;  
+}
+
+.groupfeatured {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
