--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@
 
     font-family: Fujifilm;
     font-size: 30px;
+
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .placeholder{
@@ -30,11 +33,13 @@
 }
 
 .projects{
-    height: 300px;
-    width: 300px;
-    background-color: green;
-    color: white;
+    height: 400px;
+    width: 800px;
+    background-color: rgb(240, 228, 221);
+    color: rgb(6, 72, 8);
     margin: 10px;
+    border-radius: 15px;
+    font-size: 19px;
 }
 
 .parentproject{
@@ -54,6 +59,7 @@
     background: rgba(0, 0, 0, 0.7);
     color: white;
     font-family: Altone;
+    border-radius: 15px;
 
     text-decoration: none;
 }
@@ -64,9 +70,11 @@
     justify-content: center;
 
     font-size: 15px;
+    color: white;
     border: 3px solid black;
     background: rgba(0, 0, 0, 0.7);
     margin: 10px;
+    border-radius: 15px;
 }
 
 .navigationtexts {
@@ -75,16 +83,84 @@
     justify-content: space-around;
 }
 
-.headertext {
-    padding: 10px;
-}
-
 .headertext2 {
     padding: 10px;  
 }
 
 .groupfeatured {
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
+
+    font-family: Fujifilm;
+    font-size: 30px;
+
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.groupproject {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-family: Fujifilm;
+    font-size: 30px;
+
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.groupskills {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.groupautob {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+ul{
+    margin-left: 20px;
+}
+
+h4{
+    margin-left: 20px;
+}
+
+.logotitle {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-left: 30px;
+}
+
+.footertexts {
+    display: inline-block;
+
+    padding: 10px;
+    max-height: 100px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    padding: 5px;
+    font-size: 30px;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-family: Altone;
+    border-radius: 15px;
+
+    text-decoration: none;
+}
+
+.headertext {
+    display: flex;
+    justify-content: flex-start;
 }
